--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -41,6 +41,16 @@
             <artifactId>hutool-all</artifactId>
         </dependency>
 
+<!--        引入 Redisson 依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
