--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -51,6 +51,13 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
+
+<!--        shardingsphere 分库分表-->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-jdbc-core</artifactId>
+            <version>5.3.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
