--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>shardingsphere-jdbc-core</artifactId>
             <version>5.3.2</version>
         </dependency>
+
+<!--        json转化工具包-->
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
