--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -1,2 +1,21 @@
 server:
   port: 8001
+#持久层配置文件
+spring:
+  datasource:
+    username: root
+    password: 123
+    url: jdbc:mysql://124.71.146.134:3306/link?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&serverTimezone=GMT%2B8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    #    连接池
+    hikari:
+      connection-test-query: select 1
+      connection-timeout: 20000
+      idle-timeout: 300000
+      maximum-pool-size: 5
+      minimum-idle: 5
+  data:
+    redis:
+      host: 124.71.146.134
+      port: 6379
+      password: ningzaichun
