--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -1,19 +1,13 @@
 server:
   port: 8001
 #持久层配置文件
+#持久层配置文件
 spring:
   datasource:
-    username: root
-    password: 123
-    url: jdbc:mysql://124.71.146.134:3306/link?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&serverTimezone=GMT%2B8
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    #    连接池
-    hikari:
-      connection-test-query: select 1
-      connection-timeout: 20000
-      idle-timeout: 300000
-      maximum-pool-size: 5
-      minimum-idle: 5
+    # ShardingSphere 对 Driver 自定义，实现分库分表等隐藏逻辑
+    driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
+    # ShardingSphere 配置文件路径
+    url: jdbc:shardingsphere:classpath:shardingsphere-config.yaml
   data:
     redis:
       host: 124.71.146.134
